--- a/apps/frontend/src/styles.scss
+++ b/apps/frontend/src/styles.scss
@@ -23,27 +23,9 @@ html, body {
     color: colors.$font;
     height: 100%;
     margin: 0;
-    
-    .main-container {
-        margin: 0 200px;
-    }
-}
-
-@media only screen and (max-width: 850px) {
-    body {
-        .main-container {
-            margin: 0 100px;
-        }
-    }
 }
 
 @media only screen and (max-width: 700px) {
-    body {
-        .main-container {
-            margin: 0;
-        }
-    }
-
     .cdk-overlay-pane {
         max-width: 100vw !important;
 
